# nemesis

./: .gitignore  AGENTS.md  Cargo.toml  Dioxus.toml  README.md
assets/: main.css
data/: sample_cdm.xml
src/: main.rs
src/cdms/: cdm.rs  error.rs  mod.rs  raw_cdm.rs  xml_parsing.rs
