[package]
name = "nemesis"
version = "0.1.0"
authors = ["astra-kawa"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dioxus = { version = "0.6.0", features = ["fullstack"] }
hifitime = "4.1.3"
quick-xml = { version = "0.38.3", features = ["serialize"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0.16"

[features]
default = ["web"]
web = ["dioxus/web"]
server = ["dioxus/server"]

[profile]

[profile.wasm-dev]
inherits = "dev"
opt-level = 1

[profile.server-dev]
inherits = "dev"

[profile.android-dev]
inherits = "dev"
